--- a/Lab1_html5/index.html
+++ b/Lab1_html5/index.html
@@ -37,20 +37,35 @@
 
         <div class="image-slider">
           <div class="thumbnails">
-            <div class="thumbnail"><img src="img1.jpg" alt="Thumbnail 1"></div>
-            <div class="thumbnail"><img src="img2.jpg" alt="Thumbnail 2"></div>
-            <div class="thumbnail"><img src="img3.jpg" alt="Thumbnail 3"></div>
-            <div class="thumbnail"><img src="img4.jpg" alt="Thumbnail 4"></div>
-            <div class="thumbnail"><img src="img5.jpg" alt="Thumbnail 5"></div>
+            <div class="thumbnail"><img src="img1.jpg" alt="Thumbnail 1" data-index="0"></div>
+            <div class="thumbnail"><img src="img2.jpg" alt="Thumbnail 2" data-index="1"></div>
+            <div class="thumbnail"><img src="img3.jpg" alt="Thumbnail 3" data-index="2"></div>
+            <div class="thumbnail"><img src="img4.jpg" alt="Thumbnail 4" data-index="3"></div>
+            <div class="thumbnail"><img src="img5.jpg" alt="Thumbnail 5" data-index="4"></div>
           </div>
           <div class="large-image-container"></div>
+          <div class="slider-controls">
+            <button id="playPause">Play</button>
+            <label>
+              <input type="checkbox" id="repeat"> Repetă
+            </label>
+            <label>
+              Interval:
+              <select id="intervalSelect">
+                <option value="2000">2 secunde</option>
+                <option value="3000" selected>3 secunde</option>
+                <option value="5000">5 secunde</option>
+              </select>
+            </label>
+          </div>
         </div>
-
       </main>
     </div>
     <footer>
       <p>&copy; 2025 Club de Tenis. Toate drepturile rezervate.</p>
     </footer>
   </div>
+
+  <script src="slider.js"></script>
 </body>
 </html>
