--- a/Lab1_html5/noua_rezervare.html
+++ b/Lab1_html5/noua_rezervare.html
@@ -5,6 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Noua Rezervare</title>
   <link rel="stylesheet" href="style.css">
+
+  <!-- CSS pentru live-search -->
+  <style>
+    .live-search { position: relative; width: 100%; max-width: 300px; }
+    .live-search select { display: none; }
+    .custom-select {
+      border: 1px solid #ccc;
+      padding: 8px 12px;
+      border-radius: 4px;
+      background: #fff;
+      cursor: pointer;
+      user-select: none;
+    }
+    .options-container {
+      position: absolute;
+      top: 100%; left: 0; right: 0;
+      border: 1px solid #ccc;
+      background: #fff;
+      max-height: 200px;
+      overflow-y: auto;
+      display: none;
+      z-index: 10;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+    .options-container .search-box {
+      width: 100%;
+      padding: 8px;
+      border: none;
+      border-bottom: 1px solid #ddd;
+      box-sizing: border-box;
+    }
+    .options-list { list-style: none; margin: 0; padding: 0; }
+    .options-list li {
+      padding: 8px 12px;
+      cursor: pointer;
+    }
+    .options-list li:hover,
+    .options-list li.active {
+      background: #007BFF;
+      color: #fff;
+    }
+  </style>
+
+  <!-- jQuery CDN -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body class="noua-rezervare-page">
   <div class="wrapper">
@@ -19,16 +64,16 @@
     <div class="container">
       <nav class="vertical-menu">
         <ul>
-          <li><a href="terenuri.html" title="Listă terenuri">Lista Terenuri</a></li>
+          <li><a href="terenuri.html">Lista Terenuri</a></li>
           <li class="has-submenu">
-            <a href="rezerva.html" title="Rezervă teren">Rezervă Teren</a>
+            <a href="rezerva.html">Rezervă Teren</a>
             <ul class="submenu">
-              <li><a href="noua_rezervare.html" title="Rezervare nouă">Noua rezervare</a></li>
-              <li><a href="modifica_rezervare.html" title="Modificare rezervare">Modificare rezervare</a></li>
+              <li><a href="noua_rezervare.html">Noua rezervare</a></li>
+              <li><a href="modifica_rezervare.html">Modificare rezervare</a></li>
             </ul>
           </li>
-          <li><a href="login.html" title="Autentificare">Login</a></li>
-          <li><a href="signup.html" title="Înregistrare">Sign Up</a></li>
+          <li><a href="login.html">Login</a></li>
+          <li><a href="signup.html">Sign Up</a></li>
         </ul>
       </nav>
 
@@ -38,6 +83,7 @@
           <form action="#" method="post" name="nouaRezervareForm">
             <fieldset>
               <legend>Detalii Rezervare</legend>
+
               <p>
                 <label for="nume"><strong>Nume:</strong></label>
                 <input type="text" id="nume" name="nume" required>
@@ -71,6 +117,7 @@
                   <option value="teren3">Teren Mic 2</option>
                 </select>
               </p>
+
               <p>
                 <label for="county"><strong>Județ:</strong></label>
                 <select id="county" name="county">
@@ -83,10 +130,13 @@
               </p>
               <p>
                 <label for="city"><strong>Oraș:</strong></label>
-                <select id="city" name="city">
-                  <option value="">Selectează un oraș</option>
-                </select>
+                <div class="live-search">
+                  <select id="city" name="city" required>
+                    <option value="">Selectează un oraș</option>
+                  </select>
+                </div>
               </p>
+
             </fieldset>
             <p>
               <input type="submit" value="Trimite Rezervarea">
@@ -101,178 +151,84 @@
     </footer>
   </div>
 
+  <!-- jQuery + Live-search + county→city -->
   <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      const countySelect = document.getElementById("county");
-      const citySelect = document.getElementById("city");
+  $(function(){
+    // 1. hartă județ→orașe
+    const countyCities = {
+      "Cluj":       ["Cluj-Napoca","Turda","Dej"],
+      "Bucuresti":  ["Sector 1","Sector 2","Sector 3","Sector 4","Sector 5","Sector 6"],
+      "Iasi":       ["Iași","Pașcani","Hârlău"],
+      "Timis":      ["Timișoara","Lugoj","Sânnicolau Mare"]
+    };
 
-      const countyCities = {
-        "Cluj": ["Cluj-Napoca", "Turda", "Dej"],
-        "Bucuresti": ["Sector 1", "Sector 2", "Sector 3", "Sector 4", "Sector 5", "Sector 6"],
-        "Iasi": ["Iași", "Pașcani", "Hârlău"],
-        "Timis": ["Timișoara", "Lugoj", "Sânnicolau Mare"]
-      };
+    // 2. funcție generică de live-search
+    function initLiveSearch($select) {
+      // demontează UI anterior
+      $select.siblings('.custom-select, .options-container').remove();
+      $select.show();
 
-      function updateCities() {
-        citySelect.innerHTML = '<option value="">Selectează un oraș</option>';
-        const selectedCounty = countySelect.value;
-        if (countyCities[selectedCounty]) {
-          countyCities[selectedCounty].forEach(function(city) {
-            const option = document.createElement("option");
-            option.value = city;
-            option.textContent = city;
-            citySelect.appendChild(option);
-          });
-        }
-      }
-
-      // La schimbarea județului, actualizăm lista de orașe
-      countySelect.addEventListener("change", updateCities);
-    });
-  </script>
-
-  <!-- Funcția de validare a datei calendaristice -->
-  <script>
-  function valideaza(dateStr, formatStr) {
-    // Se desparte formatul și data după delimitatorul "/"
-    const formatParts = formatStr.split("/");
-    const dateParts = dateStr.split("/");
-
-    // Dacă numărul de părți diferă, data este invalidă
-    if (formatParts.length !== dateParts.length) {
-      return "Data invalida";
-    }
-
-    let day, month, year;
-
-    // Parcurgem fiecare parte conform formatului
-    for (let i = 0; i < formatParts.length; i++) {
-      const token = formatParts[i];
-      const value = dateParts[i];
-
-      if (token === "zz") {
-        day = parseInt(value, 10);
-      } else if (token === "ll") {
-        month = parseInt(value, 10);
-      } else if (token === "aaaa") {
-        year = parseInt(value, 10);
-      } else if (token === "aa") {
-        year = parseInt(value, 10);
-        // Interpretăm anii cu 2 cifre: <50 => 2000+year, >=50 => 1900+year
-        if (year < 50) {
-          year += 2000;
-        } else {
-          year += 1900;
-        }
-      } else {
-        return "Data invalida";
-      }
-    }
-
-    // Verificăm dacă ziua, luna și anul sunt numere valide
-    if (isNaN(day) || isNaN(month) || isNaN(year)) {
-      return "Data invalida";
-    }
-
-    // Verificăm dacă luna este între 1 și 12
-    if (month < 1 || month > 12) {
-      return "Data invalida";
-    }
-
-    // Determinăm numărul maxim de zile în funcție de lună și an
-    let maxDay;
-    if ([1, 3, 5, 7, 8, 10, 12].indexOf(month) !== -1) {
-      maxDay = 31;
-    } else if ([4, 6, 9, 11].indexOf(month) !== -1) {
-      maxDay = 30;
-    } else if (month === 2) {
-      // Verificare an bisect: divizibil cu 4, dar nu cu 100, sau divizibil cu 400
-      const isLeap = (year % 4 === 0 && year % 100 !== 0) || (year % 400 === 0);
-      maxDay = isLeap ? 29 : 28;
-    }
-
-    // Verificăm dacă ziua este în intervalul corect
-    if (day < 1 || day > maxDay) {
-      return "Data invalida";
-    }
-
-    return "Data valida";
-  }
-
-  // Exemple de utilizare:
-  console.log(valideaza('31/01/2006', 'zz/ll/aaaa'));  
-  console.log(valideaza('02/29/1997', 'll/zz/aaaa'));  
-  console.log(valideaza('15/08/22', 'zz/ll/aa'));       
-  </script>
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    function showIndicator(input, isValid) {
-      let indicator = input.nextElementSibling;
-      if (!indicator || !indicator.classList.contains("status-indicator")) {
-        indicator = document.createElement("span");
-        indicator.className = "status-indicator";
-        indicator.style.marginLeft = "10px"; // spațiere între input și indicator
-        input.parentNode.insertBefore(indicator, input.nextSibling);
-      }
-      indicator.textContent = "●";
-      indicator.style.color = isValid ? "green" : "red";
-    }
-  
-    function validateCustomEmail(email) {
-      const regex = /^(?=[^@]*@[^@]*$)(?=.*\.)[a-zA-Z0-9_@.]+$/;
-      return regex.test(email);
-    }
-  
-    function validatePhone(phone) {
-      const regex = /^\(\+40\)\s?\d{3}\s?\d{3}\s?\d{3}$/;
-      return regex.test(phone);
-    }
-  
-    var forms = document.querySelectorAll("form");
-    forms.forEach(function(form) {
-      form.addEventListener("submit", function(event) {
-        // Prevenim trimiterea imediată a formularului
-        event.preventDefault();
-        let isValidForm = true;
-  
-        // Obținem toate elementele de input, select și textarea din formular
-        var fields = form.querySelectorAll("input, select, textarea");
-        fields.forEach(function(field) {
-          let validField = true;
-          const value = field.value.trim();
-  
-          // Pentru câmpurile required, verificăm dacă nu sunt goale
-          if (field.hasAttribute("required") && value === "") {
-            validField = false;
-          } else {
-            // Validare personalizată pentru email
-            if (field.type === "email") {
-              validField = validateCustomEmail(value);
-            }
-            // Validare pentru telefon (dacă se completează)
-            else if (field.type === "tel" && value !== "") {
-              validField = validatePhone(value);
-            }
-          }
-          // Afișează indicatorul lângă câmp
-          showIndicator(field, validField);
-          // Dacă orice câmp este invalid, formularul nu este valid
-          if (!validField) {
-            isValidForm = false;
-          }
-        });
-  
-        if (isValidForm) {
-          // Dacă toate câmpurile sunt valide, se poate trimite formularul.
-          form.submit();
-        } else {
-          alert("Vă rugăm să corectați erorile din formular.");
-        }
+      // adună opțiunile
+      const opts = [];
+      $select.find('option').each(function(){
+        opts.push({ val: this.value, txt: this.text });
       });
+
+      // construiește UI
+      const placeholder = opts[0].txt;
+      const $display  = $('<div class="custom-select"></div>').text(placeholder);
+      const $dropdown = $(`
+        <div class="options-container">
+          <input type="text" class="search-box" placeholder="Caută...">
+          <ul class="options-list"></ul>
+        </div>
+      `);
+
+      const $list = $dropdown.find('.options-list');
+      opts.slice(1).forEach(o => {
+        $('<li>').attr('data-val', o.val).text(o.txt).appendTo($list);
+      });
+
+      $select.after($display, $dropdown).hide();
+
+      // evenimente
+      $display.on('click', function(e){
+        e.stopPropagation();
+        $('.options-container').not($dropdown).hide();
+        $dropdown.toggle();
+        $dropdown.find('.search-box').val('').focus();
+        $list.children().show();
+      });
+      $dropdown.on('click','li', function(){
+        const $li = $(this);
+        $display.text($li.text());
+        $select.val($li.data('val')).trigger('change');
+        $dropdown.hide();
+      });
+      $dropdown.find('.search-box').on('keyup', function(){
+        const term = $(this).val().toLowerCase();
+        $list.children().each(function(){
+          $(this).toggle( $(this).text().toLowerCase().indexOf(term) > -1 );
+        });
+      });
+      $(document).on('click', () => $dropdown.hide());
+    }
+
+    // 3. când se schimbă județul:
+    $('#county').on('change', function(){
+      const sel    = $(this).val();
+      const cities = countyCities[sel] || [];
+      const $city  = $('#city');
+      $city.empty().append('<option value="">Selectează un oraș</option>');
+      cities.forEach(c => {
+        $('<option>').val(c).text(c).appendTo($city);
+      });
+      initLiveSearch($city);
     });
+
+    // 4. inițializare la încărcare pagină:
+    $('#county').trigger('change');
   });
   </script>
-  
-
 </body>
 </html>
